small css alignment fix[skip ci]

--- a/core/assets/css/orbit-fox-admin.css
+++ b/core/assets/css/orbit-fox-admin.css
@@ -3730,7 +3730,7 @@ a.obfx-no-link{
     color:#bbc1cd;
 }
 .obfx-tryout-message{
-    right: -9px;
+    right: -15px;
     font-size: 90%;
     top: -9px;
     position: absolute;
